подчистили немного, и начали месседжер, и под гостем логин сделали

--- a/drive_forms/apps.json
+++ b/drive_forms/apps.json
@@ -8,6 +8,15 @@
         {
             "name": "login",
             "path": "/login"
+        },
+        {
+            "name": "calculator",
+            "path": "/calculator"
+        },
+        {
+            "name": "messenger",
+            "path": "/messenger"
         }
+
     ]
 }
