--- a/server.config.json
+++ b/server.config.json
@@ -1,6 +1,6 @@
 {
   "appDir": "drive_forms",
   "appAlias": "app",
-  "appIndexPage": "index.html",
+  "appIndexPage": "resources/public/index.html",
   "appHandler": "server.js"
 }
