--- a/drive_forms/server_config.json
+++ b/drive_forms/server_config.json
@@ -1,4 +1,5 @@
 {
+    "level": "forms",
     "publicFiles": [
         "index.html",
         "client.js",
@@ -7,7 +8,6 @@
         "style.css",
         "background.jpg",
         "client_config.json"
-    ]
-    ,
-        "defaultColor": "#c0c0c0"
+    ],
+    "defaultColor": "#c0c0c0"
 }
