--- a/drive_forms/apps.json
+++ b/drive_forms/apps.json
@@ -16,6 +16,14 @@
         {
             "name": "messenger",
             "path": "/messenger"
+        },
+        {
+            "name": "taskbar",
+            "path": "/taskbar"
+        },
+        {
+            "name": "main_menu",
+            "path": "/main_menu"
         }
 
     ]
