--- a/apps/calculator/config.json
+++ b/apps/calculator/config.json
@@ -2,5 +2,17 @@
     "level": "app",
     "system": ["mySpace"],
     "access": ["admin", "public"],
-    "dependencies": {}
+    "dependencies": {},
+    "mainMenuCommands": 
+        [
+            {"id": "main", "items": 
+                [
+                    { "caption": "apps", "items": 
+                        [
+                            { "caption": "Calculator", "action": "open"}
+                        ]
+                    }
+                ]
+            }
+        ]
 }
