--- a/apps/taskbar/config.json
+++ b/apps/taskbar/config.json
@@ -2,6 +2,6 @@
     "level": "app",
     "autoStart": true,
     "system": ["mySpace"],
-    "access": ["nologged"],
+    "access": ["admin", "public"],
     "dependencies": {}
 }
