--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.16.3",
     "randomstring": "^1.3.1",
     "sequelize": "^6.37.7"
