--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.16.3",
     "randomstring": "^1.3.1",
+    "selfsigned": "^5.2.0",
     "sequelize": "^6.37.7"
   }
 }
