усовершенстовали файловую систему

--- a/apps/calculator/config.json
+++ b/apps/calculator/config.json
@@ -1,7 +1,7 @@
 {
     "level": "app",
     "system": ["mySpace"],
-    "access": ["admin", "public"],
+    "access": ["admin", "public", "user"],
     "dependencies": {},
     "mainMenuCommands": 
         [
