--- a/apps/cpp_app/config.json
+++ b/apps/cpp_app/config.json
@@ -5,7 +5,8 @@
     ],
     "access": [
         "admin",
-        "public"
+        "public",
+        "user"
     ],
     "dependencies": {},
     "mainMenuCommands": [
