--- a/drive_forms/apps.json
+++ b/drive_forms/apps.json
@@ -32,6 +32,10 @@
         {
             "name": "fileSystem",
             "path": "/fileSystem"
+        },
+        {
+            "name": "UserSettings",
+            "path": "/UserSettings"
         }
     ]
 }
