--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "randomstring": "^1.3.1",
     "selfsigned": "^5.2.0",
     "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
     "ws": "^8.18.3",
     "yauzl": "^2.10.0"
   },
